# patterns

./: .gitignore  FunctionalProgramming.md  LICENSE  ObjectOriented.md  README.md  _config.yml
.github/: dependabot.yml
Creationals/Abstract Factory/: EnchantedMaze.js  MazeComponents.js  MazeFactory.js  client.js  package.json
_drafts/: 2024-02-10-memory safety.md  2024-02-17-asynchronous programming.md  2024-02-17-high order functions.md  2024-02-17-null safety.md  2024-02-17-type inference.md
_posts/: 2024-02-07-list comprehension.md  2024-02-10-memory safety.md  2024-02-23-memory safety.md
c++/: CMakeLists.txt
c++/Typing discipline/Currying/: main.cpp
c++/Typing discipline/SumTypes/: main.cpp
c++/Typing discipline/Tail Recursion/: main.cpp
c-sharp/: Main.cs
c-sharp/Powerful/: Class1.cs  Powerful.sln
cpp/: .gitignore  library.h
cpp/Typing discipline/: Greeter.cpp
csharp/Typing Discipline/: Main.cs
go/: README.md  go.mod
go/functional/: currying.go  highorder.go
go/main/: main.go
go/typing/entities/: entities.go
java/: Main.java
java/powerful/: .gitignore  build.gradle  settings.gradle
javascript/: package-lock.json  package.json
javascript/Concurrency/: pipeline.js  pipeline.test.js
javascript/Functional Programming/: Currying.js  Higher-order functions.js
js/: package.json  vite.config.js
js/Functional Programming/: Currying.js  Higher-order functions.js
js/Typing discipline/: main.js
php/: Currying.php  Greeter.php  HighOrderFunction.php
typescript/: README.md  main.ts  package-lock.json  package.json  vite.config.js
(+71 files in other folders)
